Finish (Minus Edit)

--- a/src/main/res/layout/fragment_desa.xml
+++ b/src/main/res/layout/fragment_desa.xml
@@ -6,10 +6,12 @@
     android:layout_height="match_parent"
     tools:context="narucodes.jimbarannews.MainActivity">
 
+
     <ListView
         android:id="@+id/listdesa"
+        android:nestedScrollingEnabled="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:longClickable="false"
@@ -27,5 +29,6 @@
         android:layout_height="300dp"
         android:layout_gravity="center_vertical"
         />
+    <!--</ScrollView>-->
 
 </RelativeLayout>
