--- a/src/main/res/layout/pusat_adapter.xml
+++ b/src/main/res/layout/pusat_adapter.xml
@@ -1,20 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
-    <TextView
-        android:id="@+id/judulpusat"
+    <ImageView
+        android:layout_width="300dp"
+        android:layout_height="75dp"
+        android:layout_weight="0.7"
+        android:src="@drawable/ic_jn"
+        android:id="@+id/imgpus"/>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Judul"
-        android:textStyle="bold"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
+        android:orientation="vertical"
+        android:layout_weight="0.3">
+        <TextView
+            android:id="@+id/judulpusat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Judul"
+            android:textStyle="bold"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
 
-    <TextView
-        android:id="@+id/infopusat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+        <TextView
+            android:id="@+id/infopusat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:maxLines="3"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
+
+        <TextView
+            android:id="@+id/pusat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
+    </LinearLayout>
 </LinearLayout>
