--- a/src/main/res/menu/activity_admin_dashboard_drawer.xml
+++ b/src/main/res/menu/activity_admin_dashboard_drawer.xml
@@ -17,6 +17,16 @@
     <item android:title="Setting">
         <menu>
             <item
+                android:id="@+id/deletepusat"
+                android:icon="@drawable/ic_delete"
+                android:title="Delete Post Pusat"
+                />
+            <item
+                android:id="@+id/deletedesa"
+                android:icon="@drawable/ic_delete"
+                android:title="Delete Post Desa"
+                />
+            <item
                 android:id="@+id/nav_logout"
                 android:icon="@drawable/ic_logout"
                 android:title="Logout" />
